# rednote-extract

./: .env.example  .gitignore  README.md  env.example  go.mod  go.sum  main.go
agent/: react_agent.go
apps/client/: index.html  package-lock.json  package.json
apps/client/src/: App.tsx  styles.css
apps/client/src-tauri/: Cargo.toml  tauri.conf.json
apps/client/src-tauri/src/: main.rs
apps/client/src/api/: client.ts
apps/client/src/pages/: CookiePage.tsx  SearchPage.tsx  SingleNotePage.tsx  UserNotesPage.tsx
apps/gateway/: main.py  requirements.txt
apps/gateway/app/api/: cookies.py  export.py  health.py  notes.py
apps/gateway/app/core/: config.py  cookie_vault.py  spider_client.py  spider_subprocess.py
apps/gateway/app/models/: note.py
browser/: rednote.go  rednote_test.go
chat_model/: chat_model.go
cmd/: main.go
config/: config.go
crawler/config/: config.go
crawler/crawler/: crawler.go
crawler/platform/xhs/: client.go  crawler.go  sign.go
crawler/store/: store.go
internal/agent/: react_agent.go  templates.go
internal/config/: config.go
internal/crawler/xhs/: client.go  crawler.go  model.go  sign_core.go  util.go
internal/llm/: llm.go
internal/models/: note.go
internal/storage/: storage.go
internal/store/: store.go
internal/utils/: utils.go  utils_test.go
models/: note.go
openspec/changes/fix-gateway-issues/: design.md  proposal.md  tasks.md
openspec/changes/xhs-client-shell/: design.md  proposal.md  tasks.md
prompt/: templates.go
tool/crawler/: crawler.go
utils/: utils_test.go
(+27 files in other folders)
